=2013-02-19=
	pattern.c now detects 1D patterns and special cases them. Eigensolver performs workspace query for greater efficiency, and Fortran interfaces tidied up. Lanczos smoothing is now an option in FFT and PolBasisVL. Added SetLayerThickness to change only thickness and not affect the cached eigenmodes.
=2011-11-21=
	Fixed bug with rotation and translation in OutputPatternDescription (thanks Aaswath).
=2011-09-16=
	Eigenvector basis for uniform layers not stored (identity matrix). Added option UseLessMemory to not store kp (k-cross) matrices.
=2011-09-06=
	Fixed minor bugs and passes Valgrind without problems (for a few test runs).
=2011-08-31=
	Added GetDiffractionOrder().
=2011-08-30=
	Fixed normal-vector bug, resolving convergence issues with subpixel-smoothing and rectangular shapes.
=2011-08-25=
	Added CHOLMOD direct solver to pattern.c.
=2011-08-23=
	Fixed segment-segment intersection code. Several cases of incorrect dielectric discretization have been fixed.
	Changed Enable/Disable* functions to Use*.
=2011-06-20=
	Added MPI support. Compile with HAVE_MPI. S4.MPIRank and MPISize are available regardless of MPI support.
=2011-04-22=
	Halved the Lanczos filter spatial width. This seems to improve convergence.
	Changed default resolution to 8 from 64.
=2011-04-21=
	Added Kottke's subpixel smoothing method. Disabled by default.
	SetLattice can now take a single number for 1D periodicity.
	SpectrumSampler can now be parallelized.
=2011-04-20=
	Changed PolarizationBasisOversamplingFactor to Resolution.
=2011-04-18=
	Fixed crash when using Kiss FFT. I overzealously converted free to S4_free for kiss_fft.
=2011-03-27=
	Switched numerical memory allocation to 16-byte alignment. LinearSolve's now use LAPACK blocked code. Fixed some memory leaks with S4_Simulation objects (field cache was not being freed).
=2011-03-20=
	Added Integrate function.
=2010-10-28=
	Fixed nan output due to uninitialized matrices Ml, Mlp1, Bl, Blp1 in rcwa.cpp.
=2010-09-10=